Fix contriner break layout on small devices.

--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -4,7 +4,11 @@
     justify-content: start;
     flex-wrap: wrap;
 }
+.smooth-scroll-container {
 
+    max-width:100%;
+    overflow: hidden;
+} 
 .header {
     position: fixed;
     width: 100%;
